--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 .dropbox
 scratch.R
 dev_scratch.R
-inst/marketing/ideas.md
+ideas.md
 inst/marketing/.Rhistory
 inst/marketing/.Rapp.history
 inst/marketing/.Rproj.user
